--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -44,7 +44,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 <div class="panel">
   <p>Tip: Try to incorporate goals that would be great for your role working with this company and not just for your own gain. <br>
 		Do: Have well thought out goals that pertain to the position you want. <br>
-		Don’t: Mention your fitness goals and diet routine.</p>
+		Don&#8217t: Mention your fitness goals and diet routine.</p>
 </div>
     
   <p>Why should we hire you? What do you bring to the table?</p>
@@ -55,7 +55,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
     <button class="accordion">Tips + Do's/Don'ts</button>
 <div class="panel">
   <p>Tip: Be confident. You made it to a face to face interview, so be proud. <br>
-		Do: Sell yourself. Talk about all the strengths you have that you know they are looking for. Talk about the “how” or “why” more than the “what.” Example: I am always on time and always meet deadlines vs I am reliable. <br>
+		Do: Sell yourself. Talk about all the strengths you have that you know they are looking for. Talk about the &rdquohow&rdquo or &rdquowhy&rdquo more than the &rdquowhat.&rdquo Example: I am always on time and always meet deadlines vs I am reliable. <br>
 		Don&#8217t: Simply state what&#8217s already listed on the job description. </p>
 </div>
     
@@ -68,7 +68,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 <div class="panel">
   <p>Tip: Research everything there is to know about the company. If you come into contact with someone who already works for the same company, name drop during the interview. <br>
 		Do: Know everything about the company. Be thoughtful with your responses. Make sure you have read the job description.  <br>
-		Don&#8217t: Talk about other companies you want to work for. Say “I just wanted to apply and see what happened.” Or “I found it on a website.” Oversell the company’s importance.</p>
+		Don&#8217t: Talk about other companies you want to work for. Say &rdquoI just wanted to apply and see what happened&rdquo. Or &rdquoI found it on a website.&rdquo. Do oversell the company’s importance.</p>
 </div>
   
   <p>What are you expecting as far as compensation?</p>
@@ -78,8 +78,8 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
     
     <button class="accordion">Tips + Do's/Don'ts</button>
 <div class="panel">
-  <p>Tip: Use the word, “compensation” instead of “pay” or “salary” and feel free to ask about benefits too. <br>
-		Do: Avoid asking for details. If they call you and say they want to hire you, respond with “Thank you. As soon as you send me a formal written offer, I️ will make my decision.” That might be a better time to discuss the details. <br>
+  <p>Tip: Use the word, &rdquocompensation&rdquo instead of &rdquopay&rdquo or &rdquosalary&rdquo and feel free to ask about benefits too. <br>
+		Do: Avoid asking for details. If they call you and say they want to hire you, respond with &rdquoThank you. As soon as you send me a formal written offer, I will make my decision&rdquo. That might be a better time to discuss the details. <br>
 		Don&#8217t: Talk about compensation in an informal way. Negotiate.</p>
 </div>
   
@@ -102,9 +102,9 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 
     <button class="accordion">Tips + Do's/Don'ts</button>
 <div class="panel">
-  <p>Tip: if you bash your old job, your current boss will feel uncomfortable and probably won’t want to hire someone who speaks so poorly of those in authority. <br>
-		Do: Pair a compliment from your previous/current boss or environment with a reason why you left or are leaving. Be respectful of those who aren’t present.<br>
-		Don’t: Bash your current/previous boss. Complain about your current/previous work environment.</p>
+  <p>Tip: If you bash your old job, your current boss will feel uncomfortable and probably won&rsquot want to hire someone who speaks so poorly of those in authority. <br>
+		Do: Pair a compliment from your previous/current boss or environment with a reason why you left or are leaving. Be respectful of those who aren&rsquot present.<br>
+		Don&rsquot: Bash your current/previous boss. Complain about your current/previous work environment.</p>
 </div>
     
  <p>How would your previous/current boss or coworkers describe you?</p>
@@ -116,7 +116,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 <div class="panel">
   <p>Tip: This is a great time to answer with your strengths and weaknesses. See your answer for that question.<br>
 		Do: Be genuine and honest unless they hated you. <br>
-		Don&#8217t: Name all your weaknesses. Say, “Well, we didn’t get along too well.”</p>
+		Don&#8217t: Name all your weaknesses. Say, &rdquoWell, we didn’t get along too well.&rdquo</p>
 </div>
    
   
@@ -130,7 +130,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 <div class="panel">
   <p>Tip: Be genuine. Don&#8217t say you’ve never been stressed. Everyone has and your boss will appreciate your honesty. <br>
 		Do: Talk about a situation you were stressed and emphasize the steps you took to fix the situation. Show them that you deal with issues well. <br>
-		Don’t: Talk about a stressful situation without a resolution. Be disrespectful about the others involved in the situation.</p>
+		Don&rsquot: Talk about a stressful situation without a resolution. Be disrespectful about the others involved in the situation.</p>
 </div>
     
   
@@ -143,7 +143,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 <div class="panel">
   <p>Tip: Have thoughtful goals that show initiative. Tailor them to the position you&#8217re applying for so they are relevant. But make sure you can follow through. <br>
 		Do: Have goals because they are good to have and not just because it&#8217s a great thing to mention in an interview. Be original. <br>
-		Don&#8217t: Have a cliche goal. Mention a goal that is unrelated to the position. Say, &rdquoI want to drink more water.&rdquo</p>
+		Don&#8217t: Have a cliche goal. Don&#8217t mention a goal that is unrelated to the position. Say, &rdquoI want to drink more water.&rdquo</p>
 </div>
     
   <p>Tell me about a time you disagreed with a decision that was make at work and how did you deal with it?</p>
@@ -157,8 +157,8 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
      
      panel">
   <p>Tip: The purpose of this question is to see how well you can deal with authority. Be careful here&#33 <br>
-		Do: Say you&#8217ll have a respectful conversation with your boss. Feel free to say, &rdquoI have never had to deal with this sort of issue but I would probably ...&rdquo <br>
-		Don&#8217t: Say you will just go around your boss’s back. Don&#8217t say you’ll just ignore your boss’s wishes. Don&#8217t ignore the problem.</p>
+		Do: Say you&#8217ll have a respectful conversation with your boss. Feel free to say, &rdquoI have never had to deal with this sort of issue but I would probably ... &rdquo. <br>
+		Don&#8217t: Say you will just go around your boss&#8217s back. Don&#8217t say you’ll just ignore your boss’s wishes. Don&#8217t ignore the problem.</p>
 </div>
   
   <p>Do you have any questions for us?</p>
