Error checking and added Username to navigate to profile
Checks if user has a valid email format and displays errors. Makes sure that the user cannot navigate to any other pages unless they have logged in or signed up. User can click on their username to go to profile. Will work on profile later.

--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>IQhomePage</title> 
+    <title>IQhomePage</title>
     <style>
 
-   body { background-color: lightblue; 
+   body { background-color: lightblue;
    }
 
    ul {
@@ -59,22 +59,22 @@
   }
 
   p{
-	border-style: solid; 
-	border-color: blue; 
+	border-style: solid;
+	border-color: blue;
    }
 
- 
+
     </style>
   </head>
-  
+
 <body>
-  
+
  <ul>
   <li><a href="#home">Home</a></li>
   <li><a href="agenda.html">Profile</a></li>
   <li><a href ="Calendar.html">Calendar</a></li>
   <li><a href="clothing.html">Clothing</a></li>
-  <li><a href="interviewQA.html">InterviewQ&A</a></li>	
+  <li><a href="interviewQA.html">InterviewQ&A</a></li>
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn"> Interviews</a>
     <div class="dropdown-content">
@@ -83,21 +83,20 @@
       <a href="#">Interview 3</a>
     </div>
   </li>
-  <li style="float:right"><a class="active" href="about.html">AboutUs</a></li>
-</ul> 
-  
+  <li style="float:left"><a class="active" href="about.html">AboutUs</a></li>
+  <li style="color:#FFFFFF; float:right; font-weight:bold"><a href="#">{{ acct }}<a/></li></ul>
+
 <div class="jumbotron jumbotron-codelines">
   <div class= "col-md-7 text-center">
     <h1>Welcome to your InterviewIQ Profile!</h1>
     <p class="alt-lead mb-4">
       <b>Your InterviewIQ Profile</b> will allow you to organize your interviews, and find the most appropriate attrie for the occasion</p>
     </div>
-  </div>  
-    
-    
+  </div>
+
+
 <h3>Dropdown Menu inside a Navigation Bar allows you to see your current interviews</h3>
 <p>The key to success: is the way you dress.</p>
 
 </body>
-</html> 
-  
+</html>
