--- a/business_app/app/templates/register.html
+++ b/business_app/app/templates/register.html
@@ -1,5 +1,25 @@
-{% extends "header.html" %}
-{% block content %}
+<head>
+  <title>InterviewIQ</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css">
+  <link href="../static/signup.css" rel="stylesheet">
+</head>
+
+<div class="container">
+  <div class="header">
+    <nav>
+      <ul class="nav nav-pills pull-right">
+        <form class="login-form " action="/" method="POST">
+          <input type="text" name="user_key" class="login-email" id="user_key" placeholder="Email" autofocus="autofocus"/>
+          <input type="password" name="user_password" class="login-password" id="user_password" placeholder="Password"/>
+          <button type="submit" value="submitted" name="signSubmit" type="button">Sign in</button>
+        </form>
+        {% if pw %}
+         <div class="alert alert-danger" style="margin-;eft: 700px; top:50%;">{{ pw }}</div>
+        {% endif %}
+      </ul>
+    </div>
+</div>
 
 <div class="jumbotron jumbotron-codelines">
   <div class="col-md-7 text-center text-md-left ">
@@ -11,6 +31,9 @@
   </div>
   <div class="contentcontainer med left" style="margin-left: 700px;">
     <form class="form-signin" action="" autocomplete="off" method="POST">
+      {% if err %}
+       <div class="alert alert-danger" style="margin-;eft: 700px; top:50%;">{{ err }}</div>
+      {% endif %}
       <dl class="form-group mt-0">
         <label for="username">Name</label>
           <input type="text" name="username" id="username" class="form-control form-control-lg input-block" placeholder="Enter your name">
@@ -23,8 +46,7 @@
         <label for="userpass">Password</label>
           <input type="password" name="userpass" id="userpass" class="form-control form-control-lg input-block" placeholder="Create a password" data-autocheck-url="/signup_check/password">
       </dl>
-      <button class="btn btn-primary btn-large f4 btn-block" type="submit" value="signUpSubmit" name="signSubmit">Sign up for Button</button>
+      <button class="btn btn-primary btn-large f4 btn-block" type="submit" value="signUpSubmit" name="signSubmit">Sign up for InterviewIQ</button>
     </form>
   </div>
 </div>
-{% endblock %}
