--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -55,7 +55,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
     <button class="accordion">Tips + Do's/Don'ts</button>
 <div class="panel">
   <p>Tip: Be confident. You made it to a face to face interview, so be proud. <br>
-		Do: Sell yourself. Talk about all the strengths you have that you know they are looking for. Talk about the &rdquohow&rdquo or &rdquowhy&rdquo more than the &rdquowhat.&rdquo Example: I am always on time and always meet deadlines vs I am reliable. <br>
+		Do: Sell yourself. Talk about all the strengths you have that you know they are looking for. Talk about the how or why more than the what. Example: I am always on time and meet deadlines vs I am reliable. <br>
 		Don&#8217t: Simply state what&#8217s already listed on the job description. </p>
 </div>
     
@@ -68,7 +68,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 <div class="panel">
   <p>Tip: Research everything there is to know about the company. If you come into contact with someone who already works for the same company, name drop during the interview. <br>
 		Do: Know everything about the company. Be thoughtful with your responses. Make sure you have read the job description.  <br>
-		Don&#8217t: Talk about other companies you want to work for. Say &rdquoI just wanted to apply and see what happened&rdquo. Or &rdquoI found it on a website.&rdquo. Do oversell the company’s importance.</p>
+		Don&#8217t: Talk about other companies you want to work for. Don&#8217t talk about other salaries that were offered to you. </p>
 </div>
   
   <p>What are you expecting as far as compensation?</p>
@@ -78,9 +78,9 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
     
     <button class="accordion">Tips + Do's/Don'ts</button>
 <div class="panel">
-  <p>Tip: Use the word, &rdquocompensation&rdquo instead of &rdquopay&rdquo or &rdquosalary&rdquo and feel free to ask about benefits too. <br>
-		Do: Avoid asking for details. If they call you and say they want to hire you, respond with &rdquoThank you. As soon as you send me a formal written offer, I will make my decision&rdquo. That might be a better time to discuss the details. <br>
-		Don&#8217t: Talk about compensation in an informal way. Negotiate.</p>
+  <p>Tip: Use the word, &ldquocompensation&rdquo instead of &ldquopay&rdquo or &ldquosalary&rdquo and feel free to ask about benefits too. <br>
+		Do: Avoid asking for details. If they call you and say they want to hire you, respond with &ldquoThank you. As soon as you send me a formal written offer, I will make my decision&rdquo. That might be a better time to discuss the details. <br>
+		Don&#8217t: Talk about compensation in an informal way. Don&#8217t negotiate.</p>
 </div>
   
   <p>What are your strengths and weaknesses?</p>
