--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -78,8 +78,8 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
     
     <button class="accordion">Tips + Do's/Don'ts</button>
 <div class="panel">
-  <p>Tip: Use the word, &ldquocompensation&rdquo instead of &ldquopay&rdquo or &ldquosalary&rdquo and feel free to ask about benefits too. <br>
-		Do: Avoid asking for details. If they call you and say they want to hire you, respond with &ldquoThank you. As soon as you send me a formal written offer, I will make my decision&rdquo. That might be a better time to discuss the details. <br>
+  <p>Tip: Use the word, compensation instead of pay or salary and feel free to ask about benefits too. <br>
+		Do: Avoid asking for details. If they call you and offer you a job, that might be a better time to discuss details.<br>
 		Don&#8217t: Talk about compensation in an informal way. Don&#8217t negotiate.</p>
 </div>
   
@@ -104,7 +104,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 <div class="panel">
   <p>Tip: If you bash your old job, your current boss will feel uncomfortable and probably won&rsquot want to hire someone who speaks so poorly of those in authority. <br>
 		Do: Pair a compliment from your previous/current boss or environment with a reason why you left or are leaving. Be respectful of those who aren&rsquot present.<br>
-		Don&rsquot: Bash your current/previous boss. Complain about your current/previous work environment.</p>
+		Don&rsquot: Bash your current/previous boss. Don&rsquot complain about your current/previous work environment.</p>
 </div>
     
  <p>How would your previous/current boss or coworkers describe you?</p>
@@ -116,7 +116,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 <div class="panel">
   <p>Tip: This is a great time to answer with your strengths and weaknesses. See your answer for that question.<br>
 		Do: Be genuine and honest unless they hated you. <br>
-		Don&#8217t: Name all your weaknesses. Say, &rdquoWell, we didn’t get along too well.&rdquo</p>
+		Don&#8217t: Name all your weaknesses. Don&#8217t say you didn&#8217t get along. </p>
 </div>
    
   
@@ -143,7 +143,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 <div class="panel">
   <p>Tip: Have thoughtful goals that show initiative. Tailor them to the position you&#8217re applying for so they are relevant. But make sure you can follow through. <br>
 		Do: Have goals because they are good to have and not just because it&#8217s a great thing to mention in an interview. Be original. <br>
-		Don&#8217t: Have a cliche goal. Don&#8217t mention a goal that is unrelated to the position. Say, &rdquoI want to drink more water.&rdquo</p>
+		Don&#8217t: Have a cliche goal. Don&#8217t mention a goal that is unrelated to the position.</p>
 </div>
     
   <p>Tell me about a time you disagreed with a decision that was make at work and how did you deal with it?</p>
@@ -157,7 +157,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
      
      panel">
   <p>Tip: The purpose of this question is to see how well you can deal with authority. Be careful here&#33 <br>
-		Do: Say you&#8217ll have a respectful conversation with your boss. Feel free to say, &rdquoI have never had to deal with this sort of issue but I would probably ... &rdquo. <br>
+		Do: Say you&#8217ll have a respectful conversation with your boss. Feel free to say you never had to deal with this sort of issue but you would probably ... <br>
 		Don&#8217t: Say you will just go around your boss&#8217s back. Don&#8217t say you’ll just ignore your boss’s wishes. Don&#8217t ignore the problem.</p>
 </div>
   
@@ -168,9 +168,9 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
     
     <button class="accordion">Tips + Do's/Don'ts</button>
 <div class="panel">
-  <p>Tip: This is a great time to flatter your interviewer by asking them questions. Ask them &rdquoWhat do you love about your job?&rdquo or &rdquoHow would you rate my success if were to take this position?&rdquo These types of questions show respect and initiative. ALWAYS ask a question. <br>
+  <p>Tip: This is a great time to flatter your interviewer by asking them questions. Ask them about their job and why they love it. These types of questions show respect and initiative. ALWAYS ask a question. <br>
 		Do: Have thoughtful questions prepared before hand. Know who you are talking to. Ask them specific questions about what they do.  <br>
-		Don&#8217t: Ask only about the compensation. Don&#8217t say &rdquoI don’t have any questions.&rdquo</p>
+		Don&#8217t: Ask only about the compensation. Don&#8217t say you don’t have any questions.</p>
 </div>
   
     
