--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -102,9 +102,9 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 
     <button class="accordion">Tips + Do's/Don'ts</button>
 <div class="panel">
-  <p>Tip: If you bash your old job, your current boss will feel uncomfortable and probably won&rsquot want to hire someone who speaks so poorly of those in authority. <br>
-		Do: Pair a compliment from your previous/current boss or environment with a reason why you left or are leaving. Be respectful of those who aren&rsquot present.<br>
-		Don&rsquot: Bash your current/previous boss. Don&rsquot complain about your current/previous work environment.</p>
+  <p>Tip: If you bash your old job, your current boss will feel uncomfortable and probably won&#8217t want to hire someone who speaks so poorly of those in authority. <br>
+		Do: Pair a compliment from your previous/current boss or environment with a reason why you left or are leaving. Be respectful of those who aren&#8217t present.<br>
+		Don&#8217t: Bash your current/previous boss. Don&#8217t complain about your current/previous work environment.</p>
 </div>
     
  <p>How would your previous/current boss or coworkers describe you?</p>
@@ -128,9 +128,9 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
     
          <button class="accordion">Tips + Do's/Don'ts</button>
 <div class="panel">
-  <p>Tip: Be genuine. Don&#8217t say you’ve never been stressed. Everyone has and your boss will appreciate your honesty. <br>
+  <p>Tip: Be genuine. Don&#8217t say you&#8217ve never been stressed. Everyone has and your boss will appreciate your honesty. <br>
 		Do: Talk about a situation you were stressed and emphasize the steps you took to fix the situation. Show them that you deal with issues well. <br>
-		Don&rsquot: Talk about a stressful situation without a resolution. Be disrespectful about the others involved in the situation.</p>
+		Don&#8217t: Talk about a stressful situation without a resolution. Be disrespectful about the others involved in the situation.</p>
 </div>
     
   
@@ -158,7 +158,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
      panel">
   <p>Tip: The purpose of this question is to see how well you can deal with authority. Be careful here&#33 <br>
 		Do: Say you&#8217ll have a respectful conversation with your boss. Feel free to say you never had to deal with this sort of issue but you would probably ... <br>
-		Don&#8217t: Say you will just go around your boss&#8217s back. Don&#8217t say you’ll just ignore your boss’s wishes. Don&#8217t ignore the problem.</p>
+		Don&#8217t: Say you will just go around your boss&#8217s back. Don&#8217t say you&#8217ll just ignore your boss&#8217s wishes. Don&#8217t ignore the problem.</p>
 </div>
   
   <p>Do you have any questions for us?</p>
@@ -170,12 +170,12 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 <div class="panel">
   <p>Tip: This is a great time to flatter your interviewer by asking them questions. Ask them about their job and why they love it. These types of questions show respect and initiative. ALWAYS ask a question. <br>
 		Do: Have thoughtful questions prepared before hand. Know who you are talking to. Ask them specific questions about what they do.  <br>
-		Don&#8217t: Ask only about the compensation. Don&#8217t say you don’t have any questions.</p>
+		Don&#8217t: Ask only about the compensation. Don&#8217t say you don&#8217t have any questions.</p>
 </div>
   
     
     
-  <-- The following is javascript code for the accordion drop down -->
+  <--! The following is javascript code for the accordion drop down -->
     
 <script>
 var acc = document.getElementsByClassName("accordion");
