finished product for interaction 2
All code here is implemented correctly EXCEPT there is no where to store user's entry for the textbooks. That will be done in iteration 3 of the project.

--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -18,7 +18,7 @@ face interview and sometimes a phone interview. Save your responses and edit the
 through and sophisticated answers. If you're stuck, feel free to check out the helpful tips.</p>
 
 <!-- The below statement is an attempt to create a link that show the interview question tips --> 
-
+<!-- After each question asked in an accordion drop down with tips + Do's/Don'ts for answering the questions --> 
     
 <br>
 
@@ -175,7 +175,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
   
     
     
-  <--! The following is javascript code for the accordion drop down -->
+  <!-- The following is javascript code for the accordion drop down from https://www.w3schools.com/howto/howto_js_accordion.asp -->
     
 <script>
 var acc = document.getElementsByClassName("accordion");
