--- a/business_app/app/templates/agenda.html
+++ b/business_app/app/templates/agenda.html
@@ -123,7 +123,9 @@ input[type=submit]:hover {
       </div>
     </div>
     <div class="row">
-      <input type="submit" value="Submit" href="agenda.html">
+    <form action="agenda.html">
+      <input type="submit" value="Submit">
+    </form>
     </div>
 </div>
 
