--- a/business_app/app/templates/register.html
+++ b/business_app/app/templates/register.html
@@ -44,7 +44,8 @@
       </dl>
       <dl class="form-group">
         <label for="userpass">Password</label>
-          <input type="password" name="userpass" id="userpass" class="form-control form-control-lg input-block" placeholder="Create a password" data-autocheck-url="/signup_check/password">
+          <input type="password" name="userpass" id="userpass" class="form-control form-control-lg input-block" placeholder="Create a password">
+          <p style="font-size:1.0em">Use at least seven characters.</p>
       </dl>
       <button class="btn btn-primary btn-large f4 btn-block" type="submit" value="signUpSubmit" name="signSubmit">Sign up for InterviewIQ</button>
     </form>
