--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -1,96 +1,21 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>IQhomePage</title>
-    <style>
+{% extends "header.html" %}
+{% block content %}
 
-   body { background-color: lightblue;
-   }
+<style>
+body { background-color: lightblue;
+}
 
-   ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      background-color: #333;
-      }
-
-   li {
-      float: left;
-      }
-
-   li a, .dropbtn {
-      display: inline-block;
-      color: white;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-  }
-
-  li a:hover, .dropdown:hover .dropbtn {
-      background-color: red;
-  }
-
-  li.dropdown {
-      display: inline-block;
-  }
-
-  .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: #f9f9f9;
-      min-width: 160px;
-      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-      z-index: 1;
-  }
-
-  .dropdown-content a {
-      color: black;
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
-      text-align: left;
-  }
-
-  .dropdown-content a:hover {background-color: #f1f1f1}
-
-  .dropdown:hover .dropdown-content {
-      display: block;
-  }
-
-  p{
-	border-style: solid;
-	border-color: blue;
-   }
-
-
-    </style>
-  </head>
-
-<body>
-
- <ul>
-  <li><a href="#home">Home</a></li>
-  <li><a href="agenda.html">Agenda</a></li>
-  <li><a href ="Calendar.html">Calendar</a></li>
-  <li><a href="clothing.html">Clothing</a></li>
-  <li><a href="interviewQA.html">InterviewQ&A</a></li>
-  <li class="dropdown">
-    <a href="javascript:void(0)" class="dropbtn"> Interviews</a>
-    <div class="dropdown-content">
-      <a href="#">Interview 1</a>
-      <a href="#">Interview 2</a>
-      <a href="#">Interview 3</a>
-    </div>
-  </li>
-  <li style="float:left"><a class="active" href="about.html">AboutUs</a></li>
-  <li style="color:#FFFFFF; float:right; font-weight:bold"><a href="#">{{ acct }}<a/></li></ul>
-
+p{
+border-style: solid;
+border-color: blue;
+}
+</style>
 <div class="jumbotron jumbotron-codelines">
   <div class= "col-md-7 text-center">
     <h1>Welcome to your InterviewIQ Profile!</h1>
     <p class="alt-lead mb-4">
-      <b>Your InterviewIQ Profile</b> will allow you to organize your interviews, and find the most appropriate attrie for the occasion</p>
+      <b>Your InterviewIQ Profile</b> will allow you to organize your interviews, and find the most appropriate attire for the occasion</p>
     </div>
   </div>
 
@@ -98,5 +23,4 @@
 <h3>Dropdown Menu inside a Navigation Bar allows you to see your current interviews</h3>
 <p>The key to success: is the way you dress.</p>
 
-</body>
-</html>
+{% endblock %}
