Fixing html skeleton

--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -1,7 +1,5 @@
-
 <html>
 <h1>InterviewIQ</h1>
-<body>
 <p>The following are common interview questions that many interviewers use to get to know their applicants during a face to
 face interview and sometimes a phone interview. Save your responses and edit them as you go so they can evolve into thought
 through and sophisticated answers. If you're stuck, feel free to check out the helpful tips.</p>
@@ -159,10 +157,11 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 		Don&#8217t: Ask only about the compensation. Don&#8217t say you don&#8217t have any questions.</p>
 </div>
 
-</body>	
+
 </html>	
 <!-- The following is javascript code for the accordion drop down from https://www.w3schools.com/howto/howto_js_accordion.asp -->
 
+<script>
 var acc = document.getElementsByClassName("accordion");
 var i;
 
@@ -181,4 +180,4 @@ for (i = 0; i < acc.length; i++) {
         }
     }
 }
-
+</script>
