--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -1,25 +1,3 @@
-<!-- The following is javascript code for the accordion drop down from https://www.w3schools.com/howto/howto_js_accordion.asp -->
-<script>
-var acc = document.getElementsByClassName("accordion");
-var i;
-
-for (i = 0; i < acc.length; i++) {
-    acc[i].onclick = function(){
-        /* Toggle between adding and removing the "active" class,
-        to highlight the button that controls the panel */
-        this.classList.toggle("active");
-
-        /* Toggle between hiding and showing the active panel */
-        var panel = this.nextElementSibling;
-        if (panel.style.display === "block") {
-            panel.style.display = "none";
-        } else {
-            panel.style.display = "block";
-        }
-    }
-}
-</script>
-
 <html>
 <h1>InterviewIQ</h1>
 <p>The following are common interview questions that many interviewers use to get to know their applicants during a face to
@@ -181,3 +159,28 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 
 
 </html>	
+
+
+<!-- The following is javascript code for the accordion drop down from https://www.w3schools.com/howto/howto_js_accordion.asp -->
+
+<script>
+var acc = document.getElementsByClassName("accordion");
+var i;
+
+for (i = 0; i < acc.length; i++) {
+    acc[i].onclick = function(){
+	/* Toggle between adding and removing the "active" class,
+        to highlight the button that controls the panel */
+        this.classList.toggle("active");
+        /* Toggle between hiding and showing the active panel */
+        var panel = this.nextElementSibling;
+        if (panel.style.display == "block") {
+            panel.style.display = "none";
+        } else {
+            panel.style.display = "block";
+        }
+    }
+}
+</script>
+
+
