Making it look better

--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -1,5 +1,14 @@
 <style>
-	/* Style the buttons that are used to open and close the accordion panel */
+
+body {
+	color: #444;
+	font-size: 16px;
+	padding-top: 40px;
+  padding-bottom: 40px;
+	}
+	
+	
+/* Style the buttons that are used to open and close the accordion panel */
 button.accordion {
     background-color: #eee;
     color: #444;
