--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -6,6 +6,8 @@ h1 {
 	}
 body {
 	color: #444;
+	padding-top: 40px;
+  padding-bottom: 40px;
 	font-size: 16px;
 	padding-top: 40px;
   padding-bottom: 40px;
