--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -70,7 +70,7 @@
   <body>
 
   <ul class="ul-style">
-   <li style="float:left"> class="a-dropbtn">InterviewIQ</a></li>
+   <li style="float:left"><InterviewIQ</a></li>
    <li style="float:left"><a href="index.html" class="a-dropbtn">Home</a></li>
    <li style="float:left"><a href="agenda.html" class="a-dropbtn">Agenda</a></li>
    <li style="float:left"><a href ="Calendar.html" class="a-dropbtn">Calendar</a></li>
