--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -6,7 +6,8 @@
     .ul-style {
        list-style-type: none;
        margin: 0;
-       padding: 0;
+       padding: 25px 50px;
+       background-color: silver;
        overflow: hidden;
        background-color: #333;
        }
@@ -70,7 +71,6 @@
   <body>
 
   <ul class="ul-style">
-   <li style="float:left"><InterviewIQ</a></li>
    <li style="float:left"><a href="index.html" class="a-dropbtn">Home</a></li>
    <li style="float:left"><a href="agenda.html" class="a-dropbtn">Agenda</a></li>
    <li style="float:left"><a href ="Calendar.html" class="a-dropbtn">Calendar</a></li>
