Updating overall look

--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -6,10 +6,12 @@
     .ul-style {
        list-style-type: none;
        margin: 0;
-       padding: 25px 50px;
+       padding: 50px 50px;
+      font-family: "Helvetica Neue";
+      font size: 20px;
        background-color: silver;
        overflow: hidden;
-       background-color: #333;
+       background-color: #444;
        }
 
     .a-dropbtn {
