--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -6,7 +6,7 @@
     .ul-style {
        list-style-type: none;
        margin: 0;
-       padding: 10px 10px;
+       padding: none;
       font-family: "Helvetica Neue";
       font size: 25px;
        overflow: hidden;
