--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -87,7 +87,7 @@
    </li>
    <li style="float:left"><a class="a-dropbtn" href="about.html">AboutUs</a></li>
    <li class="dropdown" style="float:right">
-     <a href="javascript:void(0)" class="a-dropbtn"> {{ acct }}</a>
+     <a href="javascript:void(0)" class="a-dropbtn"> Account Information</a>
      <div class="dropdown-content">
        <a href="#">Profile</a>
        <a href="signout.html">Sign Out</a>
@@ -95,6 +95,6 @@
    </li>
   </ul>
 
-    {% block content %} {% endblock %}
+    
   </body>
 </html>
