Adding extra header

--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -65,6 +65,14 @@
   line-height: 20px;
 
 }
+h1 {
+       padding: 25px 25px;
+      font-family: "Helvetica Neue";
+      font size: 45px;
+       overflow: hidden;
+       background-color: #ADD8E6;
+      }
+    
     </style>
     <link href="../static/interviewQA.css" rel="stylesheet">
   </head>
@@ -95,6 +103,8 @@
    </li>
   </ul>
 
+    <h1 align="center">InterviewIQ</h1>
+    
     
   </body>
 </html>
