--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -70,7 +70,7 @@ h1 {
       font-family: "Helvetica Neue";
       font size: 45px;
        overflow: hidden;
-       background-color: #ADD8E6;
+       background-color: #ECF1EF;
       }
     
     </style>
