--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -72,6 +72,16 @@ h1 {
        overflow: hidden;
        background-color: #ECF1EF;
       }
+     
+ b1 {
+   padding: 5px 5px;
+      font-family: "Helvetica Neue";
+      font size: 20px;
+       overflow: hidden;
+       background-color: #ECF1EF;
+      }
+   
+      }
     
     </style>
     <link href="../static/interviewQA.css" rel="stylesheet">
@@ -104,7 +114,7 @@ h1 {
   </ul>
 
     <h1 align="center">InterviewIQ</h1>
-    
+    <b1 align="center">built for future leaders</b1>
     
   </body>
 </html>
