--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -114,7 +114,7 @@ h1 {
   </ul>
 
     <h1 align="center">InterviewIQ</h1>
-    <b1 align="center">built for future leaders</b1>
+    <b1> built for future leaders</b1>
     
   </body>
 </html>
