Trying to link html files...

--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -1,5 +1,11 @@
+<html>
+<script src="https://www.w3schools.com/lib/w3.js"></script>
 <div w3-include-html="header.html"></div>
 
+<script>
+w3.includeHTML();
+</script>
+	
 <style>
 	
 body {
@@ -41,7 +47,6 @@ div.panel {
 	
 </style>
 
-<html>
 
 <p>The following are common interview questions that many interviewers use to get to know their applicants during a face to
 face interview and sometimes a phone interview. Save your responses and edit them as you go so they can evolve into thought
