Linking header file

--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -1,3 +1,6 @@
+{% extends "header.html" %}
+{% block content %}
+
 <html>
 <script src="https://www.w3schools.com/lib/w3.js"></script>
 <div w3-include-html="header.html"></div>
@@ -232,4 +235,4 @@ for (i = 0; i < acc.length; i++) {
 }
 </script>
 
-
+{% endblock %}
