--- a/business_app/app/templates/about.html
+++ b/business_app/app/templates/about.html
@@ -2,12 +2,33 @@
 {% extends "header.html" %}
 {% block content %}
 
-<h1> We are InterviewIQ! A group of students coming together to help you succeed</h1>
+<h1> We are InterviewIQ! A group of students coming together to help you succeed.</h1>
 <p>This webapp is our Software Engineering project at FSU, we came up with the idea because there is no
    easy way to organize interviews, meeting with potential employers, or the numerous career fairs offered.</p>
 <p>We wanted to give students/recent grads a way to organize career events and also have a source that will
    help the user with what to wear to these events, and also an FAQ feature.</p>
 
 <h2>Creators of InterviewIQ: Holly Culver, Hunter Davis, Elsie Adu, Abigail Perry, Abigail Arreguin </h2>
+
+<style>
+   
+   
+   h1 {
+      font-family: "Helvetica Neue";
+      font size: 30px;
+        
+   }
+   
+   body{
+      font-family: "Helvetica Neue";
+      font size: 20px;
+      
+   }
+   
+   h2 {
+    font-family: "Helvetica Neue";
+      font size: 20px;  
+   }
+
 
 {% endblock %}
