--- a/business_app/app/templates/about.html
+++ b/business_app/app/templates/about.html
@@ -8,7 +8,7 @@
 <p>We wanted to give students/recent grads a way to organize career events and also have a source that will
    help the user with what to wear to these events, and also an FAQ feature.</p>
 
-<h2>Creators of InterviewIQ: Holly Culver, Hunter Davis, Elsie Adu, Abigail Perry, Abigail Arreguin </h2>
+<p>Creators of InterviewIQ: Holly Culver, Hunter Davis, Elsie Adu, Abigail Perry, Abigail Arreguin </h2>
 
 <style>
    
@@ -23,13 +23,9 @@
    body{
       font-family: "Helvetica Neue";
       font size: 20px;
-      
+      background-color: #F5F5F5;
    }
    
-   h2 {
-    font-family: "Helvetica Neue";
-      font size: 10px;  
-   }
 
 
 {% endblock %}
