--- a/business_app/app/static/style.css
+++ b/business_app/app/static/style.css
@@ -1,6 +1,7 @@
 html,
 body {
   height: 100%;
+  font-family: "Helvetica Neue";
 }
 body {
   font-size: 100%;
@@ -10,6 +11,7 @@ body {
   background-image: -webkit-linear-gradient(#28283b 0%, #0f0f17 100%);
   background-image: linear-gradient(#28283b 0%, #0f0f17 100%);
   color: #444;
+  font-family: "Helvetica Neue";
 }
 *,
 *:before,
@@ -44,6 +46,7 @@ table {
   border-radius: 3px;
   border-collapse: collapse;
   color: #444;
+  font-family: "Helvetica Neue";
 }
 td {
   height: 48px;
