--- a/business_app/app/templates/agenda.html
+++ b/business_app/app/templates/agenda.html
@@ -13,11 +13,13 @@ input[type=text], select, textarea{
     border-radius: 4px;
     box-sizing: border-box;
     resize: vertical;
+    font-family: "Helvetica Neue";
 }
 
 label {
     padding: 12px 12px 12px 0;
     display: inline-block;
+    font-family: "Helvetica Neue";
 }
 
 input[type=submit] {
