--- a/business_app/app/templates/agenda.html
+++ b/business_app/app/templates/agenda.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 <style>
+    
+    h2 {
+        
+        font-family: "Helvetica Neue";
+    }
 * {
     box-sizing: border-box;
 }
