saving style preferences...

--- a/business_app/app/templates/clothing.html
+++ b/business_app/app/templates/clothing.html
@@ -1,6 +1,24 @@
 {% extends "header.html" %}
 {% block content %}
 
+<style>
+  
+  h1 {
+    font-family: "Helvetica Neue";
+    background-color: #F5F5F5;
+  }
+h2{
+  font-family: "Helvetica Neue";
+  background-color: #F5F5F5;
+  }
+  body{
+   font-family: "Helvetica Neue"; 
+    background-color: #F5F5F5;
+  }
+ 
+
+
+
 <h1>Types of Business Attire</h1>
 
 <h2>Casual Dress:</h2>
