--- a/business_app/app/templates/clothing.html
+++ b/business_app/app/templates/clothing.html
@@ -1,8 +1,9 @@
 {% extends "header.html" %}
 {% block content %}
+<!DOCTYPE html>
 
 <style>
-  
+ 
   h1 {
     font-family: "Helvetica Neue";
     background-color: #F5F5F5;
