saving style preferences

--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -3,13 +3,22 @@
 {% block content %}
 
 <style>
-body { background-color: lightblue;
+  h1{
+    font-family: "Helvetica Neue";
+    background-color: #F5F5F5;
+  }
+  
+body { 
+  font-family: "Helvetica Neue";
+  background-color: #F5F5F5;
+ 
 }
 
 p{
-border-style: solid;
-border-color: blue;
+
 }
+  
+  
 </style>
 <div class="jumbotron jumbotron-codelines">
   <div class= "col-md-7 text-center">
