--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -22,7 +22,7 @@ p{
 </style>
 <div class="jumbotron jumbotron-codelines">
   <div class= "col-md-7 text-center">
-    <h1>Welcome to your InterviewIQ Profile!</h1>
+    <h1 align="center">Welcome to your InterviewIQ Profile!</h1>
     <p class="alt-lead mb-4">
       <b>Your InterviewIQ Profile</b> will allow you to organize your interviews, and find the most appropriate attire for the occasion</p>
     </div>
