--- a/business_app/app/templates/about.html
+++ b/business_app/app/templates/about.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <h1> We are InterviewIQ, a group of students coming together to help you succeed!</h1>
-<img src="InterviewIQ.jpg"/>
+<img src="InterviewIQ.jpg">
 <p>This webapp is our Software Engineering project at FSU, we came up with the idea because there is no
    easy way to organize interviews, meeting with potential employers, or the numerous career fairs offered.</p>
 <p>We wanted to give students/recent grads a way to organize career events and also have a source that will
