--- a/business_app/app/templates/about.html
+++ b/business_app/app/templates/about.html
@@ -17,6 +17,7 @@
       font-family: "Helvetica Neue";
       font size: 30px;
       background-color: #F5F5F5;
+      font color: white;
         
    }
    
