--- a/business_app/app/templates/about.html
+++ b/business_app/app/templates/about.html
@@ -2,7 +2,7 @@
 {% extends "header.html" %}
 {% block content %}
 
-<h1> <img src="InterviewIQ.jpg"> We are InterviewIQ, a group of students coming together to help you succeed!</h1>
+<h1> align="center"> <img src="InterviewIQ.jpg"> We are InterviewIQ, a group of students coming together to help you succeed!</h1>
 <p>This webapp is our Software Engineering project at FSU, we came up with the idea because there is no
    easy way to organize interviews, meeting with potential employers, or the numerous career fairs offered.</p>
 <p>We wanted to give students/recent grads a way to organize career events and also have a source that will
