--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -106,7 +106,7 @@ h1 {
    </li>
   </ul>
 
-    <h1 align="center">InterviewIQ</h1>
+    <img src="InterviewIQ2 2" alt="Smiley face" align="middle">
     
   </body>
 </html>
