--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -82,7 +82,7 @@ h1 {
 
   <body>
 
-    <img src="InterviewIQ2.jpg" align="middle">
+    <h1> <img src="InterviewIQ2.jpg" align="middle"> </h1>
     
   <ul class="ul-style">
    <li style="float:left"><a href="index.html" class="a-dropbtn">Home    </a></li>
